fix content alignment

--- a/src/components/LeadCapturingForm/LeadCapturingForm.module.css
+++ b/src/components/LeadCapturingForm/LeadCapturingForm.module.css
@@ -1,10 +1,13 @@
-.wrapper {
-  min-height: 400px;
+.heroSection {
   background-image: linear-gradient(
     -60deg,
     var(--mantine-color-blue-4) 0%,
     var(--mantine-color-blue-7) 100%
   );
+}
+
+.wrapper {
+  min-height: 400px;
   padding: calc(var(--mantine-spacing-xl) * 2.5);
 
   @media (max-width: $mantine-breakpoint-sm) {
